Fix - course list gap

--- a/assets/scss/pages/_course-list.scss
+++ b/assets/scss/pages/_course-list.scss
@@ -135,7 +135,9 @@
 	&__category {
 		display: flex;
 		flex-wrap: wrap;
-		margin-bottom: $spacing_4px;
+		margin-right: -#{$spacing_4px};
+		margin-left: -#{$spacing_4px};
+		margin-top: -#{$spacing_4px};
 
 		&-items {
 			font-size: 10px;
@@ -147,6 +149,7 @@
 			color: var(--masteriyo-color-primary);
 			border-radius: $border_radius_50;
 			background-color: var(--masteriyo-color-primary-a10);
+			margin: $spacing_4px;
 		}
 	}
 
@@ -178,15 +181,14 @@
 	&__rt {
 		display: flex;
 		flex-wrap: wrap;
-		// gap: $spacing_8px;
 		align-items: center;
 		justify-content: space-between;
-		margin-bottom: $spacing_16px;
 
 		.masteriyo-course-author {
 			display: flex;
 			align-items: center;
 			flex: 1 1 50%;
+			margin-bottom: $spacing_16px;
 
 			img {
 				width: 32px;
@@ -214,6 +216,7 @@
 			font-size: 12px;
 			font-weight: 500;
 			align-items: center;
+			margin-bottom: $spacing_16px;
 
 			svg {
 				fill: var(--masteriyo-color-golden);
